updated resume path and added social web links

--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@ const newStyles = `
             <span class="close-modal" onclick="closeResumeModal()">&times;</span>
             <h2>Professional Resume</h2>
             <div class="resume-content">
-                <iframe src="docs/siphosenkosi_mlotshwa.pdf"></iframe>
+                <iframe src="docs/siphosenkosi_mlotshwa_resume.pdf"></iframe>
             </div>
         </div>
     </div>
@@ -1139,10 +1139,10 @@ const newStyles = `
                     <h3></h3>
                     <p></p>
                     <div class="social-links">
-                        <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-                        <a href="https://instagram.com/yourusername"><i class="fab fa-instagram"></i></a>
-                        <a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:your.email@domain.com"><i class="fas fa-envelope"></i></a>
+                        <a href="https://github.com/siphosenkosi803"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/1heavy0/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/siphosenkosi-mlotshwa/"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:siphosenkosi.m@yahoo.comd"><i class="fas fa-envelope"></i></a>
                     </div>
                     
                 </div>
