updated nav links on article pages

--- a/blog.html
+++ b/blog.html
@@ -842,13 +842,13 @@ const newStyles = `
 
     <section class="section">
         <div class="container">
-            <h2 class="section-title">All Articles</h2>
+            <h2 class="section-title">Browse All Articles</h2>
             <div class="grid grid-3">
                 <!-- Article 1 -->
                 <article class="card">
                     <img src="images/Earth from Space Showing Global Connectivity.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3><a href="articles/interplanetary-future.html">Humanity's Future as Interplanetary and Interstellar Travelers</a></h3>
+                        <h3><a href="interplanetary-future.html">Humanity's Future as Interplanetary and Interstellar Travelers</a></h3>
                         <p></p>
                     </div>
                 </article>
@@ -857,7 +857,7 @@ const newStyles = `
                 <article class="card">
                     <img src="images/Bioengineering Brain Concept.jpeg"  alt="AI and Global Stability" class="blog-img">
                     <div class="card-content">
-                        <h3><a href="articles/ai-global-stability.html">AI and the Future of Global Stability</a></h3>
+                        <h3><a href="ai-global-stability.html">AI and the Future of Global Stability</a></h3>
                         <p></p>
                     </div>
                 </article>
@@ -866,7 +866,7 @@ const newStyles = `
                 <article class="card">
                     <img src="images/Futuristic VR Experience.jpeg" alt="VR Experience" class="blog-img">
                     <div class="card-content">
-                        <h3><a href="articles/creating-the-oasis.html">Building the OASIS: A Tech Breakdown</a></h3>
+                        <h3><a href="creating-the-oasis.html">Building the OASIS: A Tech Breakdown</a></h3>
                         <p></p>
                     </div>
                 </article>
