--- a/index.html
+++ b/index.html
@@ -842,6 +842,7 @@ const newStyles = `
     </nav>
 
     <section class="hero" id="home">
+        
         <div class="hero-blur"></div>
         <div class="hero-content">
             <h1>Frontend<br><span class="gradient-text">Developer & Virtual Assistant</span></h1>
@@ -987,7 +988,7 @@ const newStyles = `
                         <span class="category"></span>
                         <h3>Humanity's Future as Interplanetary and Interstellar Travelers</h3>
                         <p></p>
-                        <a href="articles/interplanetary-future.html">Read More →</a>
+                        <a href="interplanetary-future.html">Read More →</a>
 
                     </div>
                 </div>
@@ -997,7 +998,7 @@ const newStyles = `
                         <span class="category"></span>
                         <h3>AI and the Future of Global Stability: Can Machines Be Trusted to Maintain Peace?</h3>
                         <p></p>
-                        <a href="articles/ai-global-stability.html">Read More →</a>
+                        <a href="ai-global-stability.html">Read More →</a>
 
                     </div>
                 </div>
@@ -1007,7 +1008,7 @@ const newStyles = `
                         <span class="category"></span>
                         <h3>Building the OASIS: A Tech Breakdown of the Virtual World of the Future</h3>
                         <p></p>
-                        <a href="articles/creating-the-oasis.html">Read More →</a>
+                        <a href="creating-the-oasis.html">Read More →</a>
 
                     </div>
                 </div>
