--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -244,16 +244,35 @@
 </head>
 <body>
     <div class="grid-background"></div>
+
+    <!-- Same navbar as index.html -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="logo">siphosenkosi mlotshwa</a>
+            <button class="mobile-menu-btn">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M3 12h18M3 6h18M3 18h18"/>
+                </svg>
+            </button>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="index.html#work">Work</a>
+                <a href="index.html#shop">Shop</a>
+                <a href="blog.html">Blog</a>
+                <a href="about.html">About</a>
+            </div>
+        </div>
+    </nav>
     
     
 
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="img/Bioengineering Brain Concept.jpeg" alt="Interplanetary Travel" class="featured-image">
+                <img src="img/Bioengineering Brain Concept.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
-                <h1>Humanity's Future as Interplanetary and Interstellar Travelers</h1>
+                <h1>AI and the Future of Global Stability</h1>
             </div>
             <div class="article-content">
                 <!-- Article content goes here -->
