--- a/interplanetary-future.html
+++ b/interplanetary-future.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- EmailJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -54,7 +56,7 @@
 
         body {
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
-            font-family: 'Rubik Mono One', sans-serif;
+            font-family: 'IBM Plex Mono', monospace;
             line-height: 1.0;
             color: black;
             background-color: white;
@@ -248,7 +250,7 @@
     <!-- Same navbar as index.html -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">siphosenkosi mlotshwa</a>
+            <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
             <button class="mobile-menu-btn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M3 12h18M3 6h18M3 18h18"/>
