added new blog post

--- a/index.html
+++ b/index.html
@@ -817,6 +817,7 @@ const newStyles = `
 
 
 
+
 </style>
 
 
@@ -931,7 +932,7 @@ const newStyles = `
     <!--Shop section -->
     <section class="section shop-section" id="shop">
         <div class="container">
-            <h2 class="section-title">Need a custom website?</h2> 
+            <h2 class="section-title">Need A Custom Website?</h2> 
 
     
 
@@ -986,12 +987,12 @@ const newStyles = `
             <h2 class="section-title">Latest Articles</h2>
             <div class="grid grid-3">
                 <div class="card">
-                    <img src="images/Earth from Space Showing Global Connectivity.jpeg" alt="Web Design" class="blog-img">
+                    <img src="images/Solitary Contemplation in Modern Minimalism.jpeg" alt="Web Design" class="blog-img">
                     <div class="card-content">
                         <span class="category"></span>
-                        <h3>Humanity's Future as Interplanetary and Interstellar Travelers</h3>
+                        <h3>The Real Reason Introverts Don’t 'Fit In': Society’s Failure to Accept Their Nature</h3>
                         <p></p>
-                        <a href="interplanetary-future.html">Read More →</a>
+                        <a href="the-real-reason-introverts-dont-fit-in.html">Read More →</a>
 
                     </div>
                 </div>
