--- a/blog.html
+++ b/blog.html
@@ -875,16 +875,26 @@ const newStyles = `
                         <p></p>
                     </div>
                 </article>
-                
-                    <!-- Article 4 -->
-                    <article class="card">
-                        <img src="images/Earth from Space Showing Global Connectivity.jpeg" alt="Space Exploration" class="blog-img">
-                        <div class="card-content">
-                            <h3><a href="interplanetary-future.html">Humanity's Future as Interplanetary and Interstellar Travelers</a></h3>
-                            <p></p>
-                        </div>
-                    </article>
+
+                <!-- Article 4 -->
+                <article class="card">
+                    <img src="images/Earth from Space Showing Global Connectivity.jpeg" alt="Space Exploration" class="blog-img">
+                    <div class="card-content">
+                        <h3><a href="interplanetary-future.html">Humanity's Future as Interplanetary and Interstellar Travelers</a></h3>
+                        <p></p>
+                    </div>
                 </article>
+
+                <!-- Article 5 -->
+                <article class="card">
+                    <img src="images/camus.jpeg" alt="Space Exploration" class="blog-img">
+                    <div class="card-content">
+                        <h3><a href="myth-of-meaning.html">The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom</a></h3>
+                        <p></p>
+                    </div>
+                </article>
+                
+
 
 
 
