added new blog article

--- a/index.html
+++ b/index.html
@@ -1068,16 +1068,18 @@ const newStyles = `
         <div class="container">
             <h2 class="section-title">Latest Articles</h2>
             <div class="grid grid-3">
+
                 <div class="card">
-                    <img src="images/Solitary Contemplation in Modern Minimalism.jpeg" alt="Web Design" class="blog-img">
+                    <img src="images/camus.jpeg" alt="Alber Camus reading a newspaper" class="blog-img">
                     <div class="card-content">
                         <span class="category"></span>
-                        <h3>The Real Reason Introverts Don’t 'Fit In': Society’s Failure to Accept Their Nature</h3>
+                        <h3>The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom</h3>
                         <p></p>
-                        <a href="the-real-reason-introverts-dont-fit-in.html">Read More →</a>
+                        <a href="myth-of-meaning.html">Read More →</a>
 
                     </div>
                 </div>
+
                 <div class="card">
                     <img src="images/Bioengineering Brain Concept.jpeg" alt="Web Design" class="blog-img">
                     <div class="card-content">
@@ -1088,16 +1090,18 @@ const newStyles = `
 
                     </div>
                 </div>
+
                 <div class="card">
-                    <img src="images/Futuristic VR Experience.jpeg" alt="Web Design" class="blog-img">
+                    <img src="images/golden record.jpg" alt="Web Design" class="blog-img">
                     <div class="card-content">
                         <span class="category"></span>
-                        <h3>Building the OASIS: A Tech Breakdown of the Virtual World of the Future</h3>
+                        <h3>The Golden Record: Humanity’s Cosmic Mixtape (and Our Attempt to Impress the Neighbors)</h3>
                         <p></p>
-                        <a href="creating-the-oasis.html">Read More →</a>
+                        <a href="the-golden-record.html">Read More →</a>
 
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
