changed the tone of the golden record article

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@ const newStyles = `
 
     <section class="section" id="work">
         <div class="container">
-            <h2 class="section-title">Web Design Work</h2>
+            <h2 class="section-title">Frontend Web Design Work</h2>
             <div class="grid grid-2">
                 <div class="card">
                     <img src="images/NFT.jpeg" alt="Project 1">
@@ -1095,7 +1095,7 @@ const newStyles = `
                     <img src="images/golden record.jpg" alt="Web Design" class="blog-img">
                     <div class="card-content">
                         <span class="category"></span>
-                        <h3>The Golden Record: Humanity’s Cosmic Mixtape (and Our Attempt to Impress the Neighbors)</h3>
+                        <h3>The Voyager Golden Record: Humanity’s Bold Message to the Cosmos</h3>
                         <p></p>
                         <a href="the-golden-record.html">Read More →</a>
 
