--- a/blog.html
+++ b/blog.html
@@ -844,7 +844,7 @@ const newStyles = `
 
     <section class="section">
         <div class="container">
-            <h2 class="section-title">Browse All Articles</h2>
+            <h2 class="section-title">All Articles</h2>
             <div class="grid grid-3">
 
                 <!-- Article  -->
@@ -880,7 +880,7 @@ const newStyles = `
                 <article class="card">
                     <img src="images/golden record.jpg" alt="the golden disc" class="blog-img">
                     <div class="card-content">
-                        <h3><a href="the-golden-record.html">The Golden Record: Humanity’s Cosmic Mixtape (and Our Attempt to Impress the Neighbors)</a></h3>
+                        <h3><a href="the-golden-record.html">The Voyager Golden Record: Humanity’s Bold Message to the Cosmos</a></h3>
                         <p></p>
                     </div>
                 </article>
@@ -894,14 +894,7 @@ const newStyles = `
                     </div>
                 </article>
 
-                <!-- Article  -->
-                <article class="card">
-                    <img src="images/Earth from Space Showing Global Connectivity.jpeg" alt="Space Exploration" class="blog-img">
-                    <div class="card-content">
-                        <h3><a href="interplanetary-future.html">Humanity's Future as Interplanetary and Interstellar Travelers</a></h3>
-                        <p></p>
-                    </div>
-                </article>
+                
 
                 
 
