made project cards clickable, added image in hero, made latest article cards clickable

--- a/about.html
+++ b/about.html
@@ -855,13 +855,17 @@ const newStyles = `
                             <span>siphosenkosi.m@yahoo.com</span>
                         </div>
                     </div>
-                    <p>A certified Software Engineer and Virtual Assistant passionate about empowering businesses and individuals to bring their visions to life through the power of technology. With a strong foundation in software development and a knack for streamlining workflows, I specialize in creating innovative solutions that bridge the gap between creativity and functionality. Whether it's designing intuitive websites, optimizing processes, or providing dedicated virtual support, I aim to deliver results that align with your goals and exceed expectations. Driven by a commitment to growth and adaptability, I thrive on tackling challenges and exploring new opportunities. Let's work together to transform your ideas into reality.</p>
+                    <p>Siphosenkosi Mlotshwa is a certified Software Engineer and Virtual Assistant passionate about empowering businesses and individuals to bring their visions to life through the power of technology. Based in Cape Town, South Africa, he combines a strong foundation in software development with a knack for streamlining workflows to deliver innovative solutions that bridge the gap between creativity and functionality.
+
+                        Professionally, Siphosenkosi serves as a Full Stack Engineer at Petro Pixels, where he specializes in creating user-friendly web and app interfaces, designing intuitive websites, and optimizing processes to help clients achieve their goals. With a commitment to growth and adaptability, he thrives on tackling challenges, exploring new opportunities, and exceeding expectations.
+                        
+                        Beyond his technical expertise, Siphosenkosi actively shares insights through his personal blog, covering topics like space, exploration, AI, and philosophy.</p>
                     <div class="btn-group">
                         <button class="btn btn-primary" onclick="openResumeModal()">View Resume</button>
                         <button class="btn btn-outline" onclick="openCertModal()">View Certifications</button>
                     </div>
                 </div> 
-            </div>
+            </div>,
         </div>
     </section>
 
