--- a/blog.html
+++ b/blog.html
@@ -849,6 +849,15 @@ const newStyles = `
 
                 <!-- Article  -->
                 <article class="card">
+                    <img src="img/Solar_Orbiter_and_Parker_Solar_Probe_pillars.jpg" alt="Space Exploration" class="blog-img">
+                    <div class="card-content">
+                        <h3><a href="parker-probe.html">Decoding the Sun’s Secrets: How the Parker Solar Probe is Listening to Our Star</a></h3>
+                        <p></p>
+                    </div>
+                </article>
+                
+                <!-- Article  -->
+                <article class="card">
                     <img src="images/camus.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3><a href="myth-of-meaning.html">The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom</a></h3>
