moved shop section to its own custom page

--- a/about.html
+++ b/about.html
@@ -835,7 +835,7 @@ const newStyles = `
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="index.html#work">Work</a>
-                <a href="index.html#shop">Shop</a>
+                <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
                 <a href="about.html">About</a>
             </div>
