--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -259,7 +259,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="index.html#work">Work</a>
-                <a href="index.html#shop">Shop</a>
+                <a href="shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
                 <a href="about.html">About</a>
             </div>
