updated shop hero background color

--- a/about.html
+++ b/about.html
@@ -368,7 +368,7 @@
     height: 180px;
     border-radius: 50%; /* Makes the image circular */
     object-fit: cover; /* Ensures the image fills the circle */
-    border: 2px solid #4f46e5; /* Optional: Add a border */
+    border: 2px solid black; /* Optional: Add a border */
 }
 
 
@@ -844,11 +844,11 @@ const newStyles = `
 
     <section class="section">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
+            <h2 class="section-title"></h2>
             <div class="about-content">
                 <img src="images/20230605_102114.jpg" alt="Profile" class="profile-img">
                 <div class="about-text">
-                    <h3>Siphosenkosi Mlotshwa</h3>
+                    <h3></h3>
                     <div class="about-contact-info">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
