--- a/blog.html
+++ b/blog.html
@@ -859,7 +859,7 @@ const newStyles = `
 
     <section class="section">
         <div class="container">
-            <h2 class="section-title">All Articles</h2>
+            <h2 class="section-title">THE NET IS VAST AND INFINITE</h2>
             <div class="grid grid-3">
                 <!-- Article 1 -->
                 <a href="parker-probe.html" class="card">
