--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@ const newStyles = `
         
         <div class="hero-blur"></div>
         <div class="hero-content">
-            <h1>Frontend Web <br><span class="gradient-text"> & App Developer</span></h1>
+            <h1>FRONTEND WEB <br><span class="gradient-text"> & APP DEVELOPER</span></h1> 
             <img src="images/VR_LOGO_1-removebg-preview.png" alt="Profile Image" class="hero-image">
             <h3></h3>
             
@@ -1042,7 +1042,7 @@ const newStyles = `
 
     <section class="section" id="work">
         <div class="container">
-            <h3 class="section-title">Frontend Web Design Work</h3>
+            <h4 class="section-title">WEB DESIGN</h4>
             <div class="grid grid-2">
                 <!-- VR Experience Platform Card -->
                 <div class="card">
@@ -1097,7 +1097,7 @@ const newStyles = `
 
 <section class="section" id="blog">
     <div class="container">
-        <h2 class="section-title">Latest Articles</h2>
+        <h4 class="section-title">LATEST ARTICLES</h4>
         <div class="grid grid-3">
             <div class="card">
                 <a href="parker-probe.html" class="card-link">
