--- a/shop.html
+++ b/shop.html
@@ -989,7 +989,7 @@ const newStyles = `
             align-items: center;
             justify-content: center;
             padding: 8rem 2rem 4rem;
-            background: #f8f9fa;
+            background: greenyellow;
             text-align: center;
         }
 
@@ -1031,15 +1031,15 @@ const newStyles = `
     <!-- New hero section for shop page -->
     <section class="shop-hero">
         <div class="container">
-            <h1>Custom Website Solutions</h1>
-            <h4>Choose from our carefully crafted packages to bring your web presence to life</h4>
+            <h1>I BUILD WEBSITES FROM SCRATCH SO YOU DON'T HAVE TO</h1>
+            <h4></h4>
         </div>
     </section>
 
     <!-- Moved shop section -->
     <section class="section shop-section">
         <div class="container">
-            <h2 class="section-title">Available Packages</h2>
+            <h3 class="section-title">AVAILABLE PACKAGES</h3>
 
             <div class="pricing-grid">
                 <div class="pricing-card">
