changed primary color

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: #4f46e5;
+            background: greenyellow;
             transition: width 0.3s ease;
         }
 
