--- a/shop.html
+++ b/shop.html
@@ -97,7 +97,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: #4f46e5;
+            background: greenyellow;
             transition: width 0.3s ease;
         }
 
@@ -287,8 +287,8 @@
         }
 
         .btn-primary {
-            background: #4f46e5;
-            color: white;
+            background: greenyellow;
+            color: black;
         }
 
         .btn-primary:hover {
