--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: #4f46e5;
+            background: greenyellow;
             transition: width 0.3s ease;
         }
 
@@ -176,18 +176,18 @@
         }
 
         .btn-primary {
-            background: #4f46e5;
-            color: white;
+            background: greenyellow;
+            color: black;
         }
 
         .btn-primary:hover {
-            background: #4338ca;
+            background: greenyellow;
             transform: translateY(-2px);
         }
 
         .btn-outline {
-            border: 2px solid #4f46e5;
-            color: #4f46e5;
+            border: 2px solid greenyellow;
+            color: black;
         }
 
         .btn-outline:hover {
@@ -551,7 +551,7 @@
 }
 
 .contact-item i {
-    color: #4f46e5;
+    color: greenyellow;
     width: 20px;
 }
 
