removed shop header

--- a/shop.html
+++ b/shop.html
@@ -292,7 +292,7 @@
         }
 
         .btn-primary:hover {
-            background: #4338ca;
+            background: whitesmoke;
             transform: translateY(-2px);
         }
 
@@ -1029,21 +1029,21 @@ const newStyles = `
     </nav>
 
     <!-- New hero section for shop page -->
-    <section class="shop-hero">
+    <!--<section class="shop-hero">
         <div class="container">
-            <h1>I BUILD WEBSITES FROM SCRATCH SO YOU DON'T HAVE TO</h1>
-            <h4></h4>
+            <h1></h1>
+            <h4>I BUILD WEBSITES FROM SCRATCH SO YOU DON'T HAVE TO</h4>
         </div>
-    </section>
+    </section> -->
 
     <!-- Moved shop section -->
     <section class="section shop-section">
         <div class="container">
-            <h3 class="section-title">AVAILABLE PACKAGES</h3>
+            <h6 class="section-title">CUSTOM WEBSITES</h6>
 
             <div class="pricing-grid">
                 <div class="pricing-card">
-                    <h2>Basic</h2>
+                    <h2>BASIC</h2>
                     <h2 class="price">$149</h2>
                     <ul>
                         <li>5 Pages</li>
@@ -1056,7 +1056,7 @@ const newStyles = `
                 </div>
                 
                 <div class="pricing-card">
-                    <h2>Standard</h2>
+                    <h2>STANDARD</h2>
                     <h2 class="price">$299</h2>
                     <ul>
                         <li>Up to 10 Pages</li>
@@ -1069,7 +1069,7 @@ const newStyles = `
                 </div>
 
                 <div class="pricing-card">
-                    <h2>Premium</h2>
+                    <h2>PREMIUM</h2>
                     <h2 class="price">$699</h2>
                     <ul>
                         <li>Unlimited Pages</li>
