changed website background color

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -58,8 +58,8 @@
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
             font-family: 'IBM Plex Mono', monospace;
             line-height: 1.0;
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
         }
 
         /* Grid background */
@@ -202,7 +202,10 @@
         }
 
         .section {
-        padding-top: 0px; /* Remove the padding that was accounting for the navbar */
+        padding-top: 0px; /* Remove the padding that was accounting for bathe navbar */
+        background: black;
+
+
     }
 
     .article-container {
