--- a/blog.html
+++ b/blog.html
@@ -33,8 +33,8 @@
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
             font-family: 'IBM Plex Mono', monospace;
             line-height: 1.0;
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
         }
 
         /* Grid background */
@@ -210,7 +210,7 @@
         }
 
         .card h3 {
-    color: black;
+    color: white;
     text-decoration: none !important;
 }
 
