--- a/shop.html
+++ b/shop.html
@@ -29,8 +29,8 @@
             font-family: 'IBM Plex Mono', monospace;
            
             line-height: 1.6;
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
         }
 
         /* Grid background */
@@ -336,6 +336,7 @@
 
         .card-content h3 {
             margin-bottom: 1rem;
+            
         }
 
 
@@ -400,6 +401,7 @@
         /* Sections */
         .section {
             padding: 6rem 2rem;
+            background: black;
         }
 
         .section-title {
@@ -417,6 +419,7 @@
 
         .product-grid {
             margin-bottom: 4rem;
+            background: black;
         }
 
         .pricing-grid {
@@ -663,7 +666,7 @@
 
         .shop-section {
     padding: 6rem 2rem;
-    background: #f8f9fa;
+    background: black;
 }
 
 .product-grid {
@@ -755,7 +758,7 @@
 }
 
 .pricing-card {
-    background: whitesmoke;
+    background: black;
     border-radius: 1rem;
     padding: 2rem;
     text-align: left;
@@ -780,7 +783,7 @@
     content: "✓";
     position: absolute;
     left: 0;
-    color: black;
+    color: white;
 }
 
 .pricing-card .btn {
