--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
             font-family: 'IBM Plex Mono', monospace;
             line-height: 1.0;
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
         }
 
         /* Grid background */
@@ -439,7 +439,7 @@
         }
 
         .cert-card {
-            background: #f8f9fa;
+            background: black;
             border-radius: 0.5rem;
             padding: 1.5rem;
             text-align: center;
@@ -463,7 +463,7 @@
         }
 
         .cert-card p {
-            color: #666;
+            color: white;
             margin-bottom: 1rem;
         }
 
