--- a/myth-of-meaning.html
+++ b/myth-of-meaning.html
@@ -58,8 +58,8 @@
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
             font-family: 'IBM Plex Mono', monospace;
             line-height: 1.0;
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
         }
 
         /* Grid background */
