--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             position: fixed;
             width: 100%;
             z-index: 1000;
-            background-color: white;
+            background-color: black;
             transition: all 0.3s ease;
             padding: 1rem 0;
         }
 
         .navbar.scrolled {
-            background: rgba(255, 255, 255, 0.95);
+            background: black
             backdrop-filter: blur(10px);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -80,7 +80,7 @@
             font-weight: 700;
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
-            color: transparent;
+            color: white;
             text-decoration: none;
         }
 
@@ -91,7 +91,7 @@
 
         .nav-links a {
             text-decoration: none;
-            color: black;
+            color: white;
             position: relative;
             padding-bottom: 0.25rem;
         }
@@ -121,6 +121,7 @@
     cursor: pointer;
     padding: 0.5rem;
     z-index: 1000;
+    color: white;
 }
 
 .hamburger {
@@ -132,7 +133,7 @@
 
 .hamburger .line {
     display: block;
-    background: #000;
+    background: white;
     width: 100%;
     height: 2px;
     position: absolute;
@@ -170,6 +171,7 @@
 @media (max-width: 768px) {
     .mobile-menu-btn {
         display: block;
+        background: black;
     }
 
     .nav-links {
@@ -178,7 +180,7 @@
         right: 0;
         height: 100vh;
         width: 250px;
-        background: rgba(255, 255, 255, 0.98);
+        background: black
         backdrop-filter: blur(10px);
         padding: 80px 2rem 2rem;
         transform: translateX(100%);
@@ -196,6 +198,7 @@
         display: block;
         padding: 1rem 0;
         font-size: 1.1rem;
+        color: white;
     }
 }
 
@@ -231,7 +234,7 @@
 }
 
         .hero-image {
-            max-width: 400px; /* Using max-width instead of fixed width */
+            max-width: 500px; /* Using max-width instead of fixed width */
             width: 100%; /* Allows image to be responsive */
             height: auto; /* Maintains aspect ratio */
             margin-top: -0.5rem;
@@ -260,11 +263,11 @@
             z-index: -1;
         }
 
-        .hero h4 {
+        .hero h5 {
             font-size: clamp(2.5rem, 5vw, 4.5rem);
-            font-weight: 600;
+            font-weight: 900;
             margin-bottom: 0.5rem;
-            line-height: 0.5;
+            line-height: 1.5;
         }
 
         .gradient-text {
@@ -535,7 +538,7 @@
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: white;
+                background: black;
                 padding: 1rem;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
@@ -1037,7 +1040,7 @@ const newStyles = `
         
         <div class="hero-blur"></div>
         <div class="hero-content">
-            <h4>WEB & APP DEVELOPER</h4> 
+            <h5></h5> 
             <img src="images/VR_LOGO_1-removebg-preview.png" alt="Profile Image" class="hero-image">
             <h3></h3>
             
