--- a/about.html
+++ b/about.html
@@ -53,13 +53,13 @@
             position: fixed;
             width: 100%;
             z-index: 1000;
-            background-color: white;
+            background-color: black;
             transition: all 0.3s ease;
             padding: 1rem 0;
         }
 
         .navbar.scrolled {
-            background: rgba(255, 255, 255, 0.95);
+            background: black
             backdrop-filter: blur(10px);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -78,7 +78,7 @@
             font-weight: 700;
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
-            color: transparent;
+            color: white;
             text-decoration: none;
         }
 
@@ -89,7 +89,7 @@
 
         .nav-links a {
             text-decoration: none;
-            color: black;
+            color: white;
             position: relative;
             padding-bottom: 0.25rem;
         }
@@ -115,6 +115,7 @@
             border: none;
             cursor: pointer;
             padding: 0.5rem;
+            color: white;
         }
 
         /* Hero Section */
@@ -347,7 +348,7 @@
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: white;
+                background: black;
                 padding: 1rem;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
@@ -855,7 +856,7 @@ const newStyles = `
                             <span>siphosenkosi.m@yahoo.com</span>
                         </div>
                     </div>
-                    <p>Siphosenkosi Mlotshwa is a certified Software Engineer and Virtual Assistant passionate about empowering businesses and individuals to bring their visions to life through the power of technology. Based in Cape Town, South Africa, he combines a strong foundation in software development with a knack for streamlining workflows to deliver innovative solutions that bridge the gap between creativity and functionality.
+                    <p>Siphosenkosi Mlotshwa is a certified Software Engineer and Virtual Assistant passionate about empowering businesses and individuals to bring their visions to life through the power of technology. He combines a strong foundation in software development with a knack for streamlining workflows to deliver innovative solutions that bridge the gap between creativity and functionality.
 
                         Professionally, Siphosenkosi serves as a Full Stack Engineer at Petro Pixels, where he specializes in creating user-friendly web and app interfaces, designing intuitive websites, and optimizing processes to help clients achieve their goals. With a commitment to growth and adaptability, he thrives on tackling challenges, exploring new opportunities, and exceeding expectations.
                         
