--- a/blog.html
+++ b/blog.html
@@ -53,13 +53,13 @@
             position: fixed;
             width: 100%;
             z-index: 1000;
-            background-color: white;
+            background-color: black;
             transition: all 0.3s ease;
             padding: 1rem 0;
         }
 
         .navbar.scrolled {
-            background: rgba(255, 255, 255, 0.95);
+            background: black
             backdrop-filter: blur(10px);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -78,7 +78,7 @@
             font-weight: 700;
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
-            color: transparent;
+            color: white;
             text-decoration: none;
         }
 
@@ -89,7 +89,7 @@
 
         .nav-links a {
             text-decoration: none;
-            color: black;
+            color: white;
             position: relative;
             padding-bottom: 0.25rem;
         }
@@ -362,13 +362,14 @@
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: white;
+                background: black;
                 padding: 1rem;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
 
             .mobile-menu-btn {
                 display: block;
+                color: white;
             }
 
             .nav-links.active {
