--- a/shop.html
+++ b/shop.html
@@ -49,13 +49,13 @@
             position: fixed;
             width: 100%;
             z-index: 1000;
-            background-color: white;
+            background-color: black;
             transition: all 0.3s ease;
             padding: 1rem 0;
         }
 
         .navbar.scrolled {
-            background: rgba(255, 255, 255, 0.95);
+            background: black;
             backdrop-filter: blur(10px);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -74,7 +74,7 @@
             font-weight: 700;
             background: linear-gradient(135deg, black, black);
             -webkit-background-clip: text;
-            color: transparent;
+            color: white;
             text-decoration: none;
         }
 
@@ -85,7 +85,7 @@
 
         .nav-links a {
             text-decoration: none;
-            color: black;
+            color: white;
             position: relative;
             padding-bottom: 0.25rem;
         }
@@ -115,6 +115,7 @@
     cursor: pointer;
     padding: 0.5rem;
     z-index: 1000;
+    color: white;
 }
 
 .hamburger {
@@ -126,7 +127,7 @@
 
 .hamburger .line {
     display: block;
-    background: #000;
+    background: white;
     width: 100%;
     height: 2px;
     position: absolute;
@@ -164,6 +165,8 @@
 @media (max-width: 768px) {
     .mobile-menu-btn {
         display: block;
+
+
     }
 
     .nav-links {
@@ -172,7 +175,7 @@
         right: 0;
         height: 100vh;
         width: 250px;
-        background: rgba(255, 255, 255, 0.98);
+        background: black;
         backdrop-filter: blur(10px);
         padding: 80px 2rem 2rem;
         transform: translateX(100%);
@@ -528,13 +531,14 @@
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: white;
+                background: black;
                 padding: 1rem;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
 
             .mobile-menu-btn {
                 display: block;
+                color: white;
             }
 
             .nav-links.active {
